--- a/NPCTransmogrifier/NPCTransmogrifier.csproj
+++ b/NPCTransmogrifier/NPCTransmogrifier.csproj
@@ -9,5 +9,6 @@
   <ItemGroup>
     <PackageReference Include="Mutagen.Bethesda.Skyrim" Version="0.42" />
     <PackageReference Include="Mutagen.Bethesda.Synthesis" Version="0.26" />
+    <PackageReference Include="Mutagen.Bethesda.FormKeys.SkyrimSE" Version="3.1.0" />
   </ItemGroup>
 </Project>
